@@ -134,7 +134,7 @@ public class Rs2DepositBox {
      * @return {@code true} if at least one item was deposited, {@code false} otherwise
      */
     public static boolean depositAllExcept(Integer... ids) {
-        return depositAll(x -> Arrays.stream(ids).noneMatch(id -> id == x.id));
+        return depositAll(x -> Arrays.stream(ids).noneMatch(id -> id == x.getId()));
     }
 
 
@@ -201,7 +201,7 @@ public class Rs2DepositBox {
      * @return {@code true} if any items were deposited, {@code false} otherwise
      */
     public static boolean depositAll(Integer... ids) {
-        return depositAll(x -> Arrays.stream(ids).anyMatch(id -> id == x.id));
+        return depositAll(x -> Arrays.stream(ids).anyMatch(id -> id == x.getId()));
     }
 
 
@@ -255,7 +255,7 @@ public class Rs2DepositBox {
      */
     public static void depositOne(Rs2ItemModel rs2Item) {
         if (rs2Item == null || !isOpen()) return;
-        if (!Rs2Inventory.hasItem(rs2Item.id)) return;
+        if (!Rs2Inventory.hasItem(rs2Item.getId())) return;
         
         invokeMenu(2, rs2Item);
     }
@@ -304,7 +304,7 @@ public class Rs2DepositBox {
      */
     public static void depositX(Rs2ItemModel rs2Item, int amount) {
         if (rs2Item == null || !isOpen()) return;
-        if (!Rs2Inventory.hasItem(rs2Item.id)) return;
+        if (!Rs2Inventory.hasItem(rs2Item.getId())) return;
 
         invokeMenu(5, rs2Item);
 
@@ -387,7 +387,7 @@ public class Rs2DepositBox {
      * @return the bounding rectangle of the item's slot, or {@code null} if the item is not found
      */
     public static Rectangle itemBounds(Rs2ItemModel rs2Item) {
-        Widget itemWidget = getItemWidget(rs2Item.slot);
+        Widget itemWidget = getItemWidget(rs2Item.getSlot());
         if (itemWidget == null) return null;
         return itemWidget.getBounds();
     }
@@ -439,14 +439,10 @@ public class Rs2DepositBox {
             return null;
         }
 
-        if (Microbot.getClient().getLocalPlayer().getWorldLocation() == worldPoint) {
-            List<Integer> boothIds = Arrays.asList(Rs2BankID.bankIds);
-            List<TileObject> bankObjs = Rs2GameObject.getGameObjects().stream()
-                    .filter(obj -> obj.getWorldLocation().distanceTo(worldPoint) < maxObjectSearchRadius)
-                    .filter(obj -> boothIds.contains(obj.getId()))
-                    .collect(Collectors.toList());
+        if (Objects.equals(Microbot.getClient().getLocalPlayer().getWorldLocation(), worldPoint)) {
+            List<TileObject> bankObjs = List.of(Rs2GameObject.findDepositBox(maxObjectSearchRadius));
 
-            Optional<DepositBoxLocation> fromObject = bankObjs.stream()
+            Optional<DepositBoxLocation> byObject = bankObjs.stream()
                     .map(obj -> {
                         DepositBoxLocation closest = accessibleDepositBoxes.stream()
                                 .min(Comparator.comparingInt(b -> obj.getWorldLocation().distanceTo(b.getWorldPoint())))
@@ -462,9 +458,9 @@ public class Rs2DepositBox {
                     .min(Comparator.comparingInt(Map.Entry::getValue))
                     .map(Map.Entry::getKey);
 
-            if (fromObject.isPresent()) {
-                Microbot.log("Found nearest deposit box (object): " + fromObject.get());
-                return fromObject.get();
+            if (byObject.isPresent()) {
+                Microbot.log("Found nearest deposit box (object): " + byObject.get());
+                return byObject.get();
             }
         }
 
